--- a/date.html
+++ b/date.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=" device-width ", initial-scale=1.0">
-    <title>Date</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
@@ -23,7 +23,6 @@
             //  document.getElementById("id2").innerHTML = dat;
         }
     </script>
-
 </body>
 
 </html>
